# SpriteStudio5-SDK

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  PlayerDoxyfile  README.md  class_i_ss_xml_archiver.html  class_i_ss_xml_archiver.js  class_i_ss_xml_archiver__inherit__graph.md5  class_s_s_open_g_l_fragment_shader.html  class_s_s_open_g_l_program_object-members.html  class_s_s_open_g_l_program_object.html  class_s_s_open_g_l_program_object.js  class_s_s_open_g_l_shader-members.html  class_s_s_open_g_l_shader.html  class_s_s_open_g_l_shader.js  class_s_s_open_g_l_shader_man-members.html  class_s_s_open_g_l_shader_man.html  class_s_s_open_g_l_vertex_shader-members.html  class_s_s_open_g_l_vertex_shader.html  class_s_s_open_g_l_vertex_shader.js  class_sample_scene.html  class_sample_scene.js  class_sample_scene__inherit__graph.map  class_sample_scene__inherit__graph.md5  class_ss_animation__coll__graph.map  class_ss_animation_settings-members.html  class_ss_animation_settings.js  class_ss_animation_settings__coll__graph.map  class_ss_anime_pack-members.html  class_ss_anime_pack.html  class_ss_anime_pack__coll__graph.map  class_ss_anime_pack__coll__graph.md5  class_ss_cel_map_linker__coll__graph.map  class_ss_cell-members.html  class_ss_cell__coll__graph.map  class_ss_cell__coll__graph.md5  class_ss_cell_map-members.html  class_ss_cell_map__coll__graph.map  class_ss_cell_map_manager.html  (+493 more)
Common/Animator/: ISsEffectRender.h  MersenneTwister.h  ssplayer_PartState.cpp  ssplayer_PartState.h  ssplayer_animedecode.cpp  ssplayer_animedecode.h  ssplayer_cellmap.cpp  ssplayer_cellmap.h  ssplayer_effect.cpp  ssplayer_effect.h  ssplayer_effect2.cpp  ssplayer_effect2.h  ssplayer_effectfunction.cpp  ssplayer_effectfunction.h  ssplayer_macro.h  ssplayer_matrix.cpp  ssplayer_matrix.h  ssplayer_render.cpp  ssplayer_render.h  ssplayer_types.h  xorshift32.h
Common/Drawer/: ssplayer_render_dx9.cpp  ssplayer_render_dx9.h  ssplayer_render_gl.cpp  ssplayer_render_gl.h  ssplayer_shader_gl.cpp  ssplayer_shader_gl.h
Common/Helper/: DebugPrint.cpp  DebugPrint.h  IsshTexture.cpp  IsshTexture.h  XPFileOpenDlg.cpp  ssHelper.h  sshObject.cpp  sshObject.h  sshScene.cpp  sshScene.h  sshTask.cpp  sshTextureBMP.cpp  sshTextureBMP.h  stb_image.c
Common/Loader/: SsEffectBehavior.cpp  SsEffectBehavior.h  SsEffectElement.cpp  SsEffectElement.h  ssInterpolation.cpp  ssInterpolation.h  ssarchiver.cpp  ssarchiver.h  ssattribute.cpp  ssattribute.h  ssattribute.h.orig  ssloader.h  ssloader_ssae.cpp  sstypes.cpp  (+12 more)
SDK/: _binary_data_writer_8h_source.html  _debug_print_8h_source.html  _file_util_8h_source.html  _issh_texture_8h_source.html  _lump_8h_source.html  _lump_exporter_8h_source.html  _o_s_x_file_open_8h_source.html  _s_s5_player_8h_source.html  _s_s5_player_data_8h_source.html  _s_s_texture_d_x9_8h_source.html  _s_s_texture_g_l_8h_source.html  _ss_player_converter_8h_source.html  _x_p_file_open_dlg_8h_source.html  annotated.html  annotated.js  babel_8h_source.html  bind___animation_8h_source.html  bind___anime_pack_8h_source.html  bind___cellmap_8h_source.html  bind___s_s_x_m_l_8h_source.html  bind___ss_anime_decoder_8h_source.html  bind___ss_attribute_8h_source.html  bind___ss_keyframe_8h_source.html  bind___ss_part_8h_source.html  bind___ss_part_anime_8h_source.html  class_animation-members.html  class_animation.html  class_animation.js  class_argument_pointer-members.html  class_argument_pointer.html  class_argument_pointer.js  class_binary_data_writer-members.html  class_binary_data_writer.html  class_binary_data_writer.js  class_bind___animation-members.html  class_bind___animation.html  class_bind___animation.js  class_bind___cell-members.html  class_bind___cell.html  class_bind___cell.js  (+1979 more)
Ss5ConverterGUI/: mainwindow.cpp  mainwindow.h  readme.txt
Tools/: README.md
loader/: ssInterpolation.cpp  ssarchiver.h  ssattribute.h  ssloader.h  ssloader_ssae.cpp  ssloader_ssae.h  ssloader_ssce.cpp  ssloader_ssce.h  ssloader_sspj.h  ssstring_uty.cpp  sstypes.cpp  ssvalue.h
search/: all_5f.js  all_62.js  all_65.js  all_66.js  all_69.js  all_6d.js  all_71.js  all_74.js  all_75.js  all_77.js  all_7a.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_68.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_6f.js  classes_72.js  classes_73.js  classes_77.js  enumvalues_62.js  enumvalues_66.js  enumvalues_68.js  enumvalues_69.js  enumvalues_70.js  enumvalues_72.js  functions_66.js  functions_6c.js  variables_61.js  variables_63.js  variables_66.js  variables_6d.js  variables_70.js  variables_72.js  variables_73.js  (+3 more)
ssbpLib/: _s_s5_player_8h_source.html  _s_s5_player_data_8h_source.html  _s_s5_player_platform_8h_source.html  _s_s5_player_types_8h_source.html  annotated.html  classes.html  classss_1_1_anime_cache-members.html  classss_1_1_anime_cache.html  classss_1_1_cell_cache-members.html  classss_1_1_cell_cache.html  classss_1_1_custom_sprite-members.html  classss_1_1_custom_sprite.html  classss_1_1_data_array_reader-members.html  classss_1_1_data_array_reader.html  classss_1_1_player-members.html  classss_1_1_player.html  classss_1_1_resource_manager-members.html  classss_1_1_resource_manager.html  classss_1_1_s_s_point-members.html  classss_1_1_s_s_point.html  classss_1_1_s_s_rect-members.html  classss_1_1_s_s_rect.html  classss_1_1_s_s_size-members.html  classss_1_1_s_s_size.html  classss_1_1_to_pointer-members.html  classss_1_1_to_pointer.html  dir_8048b2117075e6f01ef165fcb0690000.html  dir_e19a901fbc9f85d22cecd86353e701d8.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacess.html  (+42 more)
testdata/: NewAnimation.ssae  car.ssae  layout.ssae  rotation.ssae  sand.ssae  vertex.ssae
unittest/: gtest-all.cc  gtest_main.cc  unit_ssloader_ssae.cc  unit_ssloader_ssce.cc  unit_ssloader_sspj.cc
viewer_sample/: main.cpp  main_dx9.cpp  main_gl.cpp  sampleScene.cpp  sampleScene.h
(+1093 files in other folders)
